--- a/frontend/src/components/Message/Message.scss
+++ b/frontend/src/components/Message/Message.scss
@@ -13,3 +13,13 @@
     background-color: #328ec4;
   }
 }
+
+@media (prefers-color-scheme: dark) {
+  .Message {
+    background-color: #333;
+  }
+
+  .Message.me {
+    background-color: #535bf2;
+  }
+}
