--- a/frontend/src/components/atoms/Message/Message.scss
+++ b/frontend/src/components/atoms/Message/Message.scss
@@ -1,17 +1,26 @@
+.MessageWrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+}
+
+.CurrentUser {
+  align-items: end;
+
+  .Message {
+    color: white;
+    background-color: #328ec4;
+  }
+}
+
+
 .Message {
-  display: block;
   background-color: white;
-  margin: 10px auto;
+  margin: 10px;
   box-shadow: 0 5px 15px -5px rgba(0, 0, 0, 0.2);
   padding: 10px 20px;
   border-radius: 5px;
   clear: both;
-
-  &.me {
-    color: white;
-    float: right;
-    background-color: #328ec4;
-  }
 }
 
 @media (prefers-color-scheme: dark) {
